# book-notes-the-elements-of-statistical-learning-notes

./: .gitignore  README.md  pyproject.toml
ch10-boosting-and-additive-trees/: Algorithm-10.1-AdaBoost.M1.ipynb  Algorithm-10.3-GDTB-compare-to-sklearn-implementation.ipynb  Algorithm-10.3-Gradient-Tree-Boosting-Algorithm-for-regression.ipynb  Algorithm-10.3-Gradient-Tree-Boosting-Algorithm.ipynb  Algorithm-10.4-Gradient-Boosting-for-classification.ipynb  Error-functions.ipynb  Show-AdaBoost-is-a-forward-stagewise-additive-model-with-exponential-loss.ipynb  Show-gradient-of-deviance-wrt-log-odds-is-the-residual-between-label-and-probability.ipynb  Show-minimizing-exponential-loss-is-equivalent-to-minimizing-deviance.ipynb  Show-minimizing-log-loss-is-equivalent-to-minimizing-deviance.ipynb  Show-multinomial-deviance-in-terms-of-log-odds.ipynb  adaboost_m1.py  error-functions.ipynb  gb_classification.py  gradient_boosting.py
