[tool.poetry]
name = "the-elements-of-statistical-learning"
version = "0.1.0"
description = ""
authors = ["Zhuyi Xue"]

[tool.poetry.dependencies]
install = "^1.3.4"
jupyter = "^1.0.0"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
pandas = "^1.1.4"
python = "^3.9"
scikit-learn = "^0.23.2"
scipy = "^1.5.4"
tqdm = "^4.54.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
